--- a/Project EDA.ipynb
+++ b/Project EDA.ipynb
@@ -45,7 +45,7 @@
     "keep_metrics = [\"country\", \"year\", \"co2\", \"population\", \"gdp\", \"primary_energy_consumption\"]\n",
     "\n",
     "# Import main co2 dataset\n",
-    "co2 = pd.read_csv(\"owid-co2-data.csv\")\n",
+    "co2 = pd.read_csv(\"data/owid-co2-data.csv\")\n",
     "\n",
     "co2 = co2[keep_metrics]\n",
     "\n",
@@ -248,7 +248,7 @@
    "source": [
     "#  Load Coal Production Dataset\n",
     "\n",
-    "coal = pd.read_csv(\"coal-production-by-region.csv\")\n",
+    "coal = pd.read_csv(\"data/coal-production-by-region.csv\")\n",
     "coal = coal.drop([\"Code\"], axis=1)\n",
     "\n",
     "if debug:\n",
@@ -605,7 +605,7 @@
    "source": [
     "# Load Oil Consumption\n",
     "\n",
-    "oil = pd.read_csv(\"oil-consumption-by-country.csv\")\n",
+    "oil = pd.read_csv(\"data/oil-consumption-by-country.csv\")\n",
     "oil = oil.drop([\"Code\"], axis=1)\n",
     "\n",
     "if debug:\n",
@@ -1067,7 +1067,7 @@
    "source": [
     "# Load Coal Consumption Dataset\n",
     "\n",
-    "coal_cons = pd.read_csv('world-coal-consumption-1978-2020.csv')\n",
+    "coal_cons = pd.read_csv('data/world-coal-consumption-1978-2020.csv')\n",
     "\n",
     "# Comment out this line to include EU27 countries\n",
     "coal_cons = coal_cons.drop([\"EU27\"], axis=1)\n",
@@ -1454,7 +1454,7 @@
    "source": [
     "# Load Coal Consumption Dataset\n",
     "\n",
-    "cars = pd.read_csv('car_production.csv')\n",
+    "cars = pd.read_csv('data/car_production.csv')\n",
     "\n",
     "cars = pd.melt(cars, id_vars=[\"country\"], var_name=\"year\", value_name=\"Cars Produced - Thousands\")\n",
     "cars[\"year\"] = pd.to_numeric(cars[\"year\"])  \n",
