--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cb5c2245",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "934b75f4",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d18d4aac",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "003f3851",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0e20ef4b",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8b77dacc",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "45740112",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0b3c6476",
    "metadata": {},
    "outputs": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a652a5b9",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3314db59",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2f2b3b86",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1135,7 @@
        "57   1992          India                1.224084"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6093978f",
    "metadata": {},
    "outputs": [
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3093231b",
    "metadata": {},
    "outputs": [
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "36a40c82",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "cb21a151",
    "metadata": {},
    "outputs": [],
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3408a8b3",
    "metadata": {},
    "outputs": [
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c2a3301e",
    "metadata": {},
    "outputs": [
@@ -1859,7 +1859,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1870,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "91f11af8",
    "metadata": {},
    "outputs": [
@@ -2030,7 +2030,7 @@
        "max             11214.078236               24.343903  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "04a9e229",
    "metadata": {},
    "outputs": [
@@ -2093,7 +2093,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2106,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9e074e57",
    "metadata": {},
    "outputs": [
@@ -2266,7 +2266,7 @@
        "max             11214.078236               24.343903  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "9ab3ff91",
    "metadata": {},
    "outputs": [],
@@ -2296,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "0a6c8ace",
    "metadata": {},
    "outputs": [],
@@ -2307,7 +2307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "110f9b57",
    "metadata": {},
    "outputs": [
@@ -2327,7 +2327,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2338,7 +2338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "8aa73f7b",
    "metadata": {},
    "outputs": [],
@@ -2357,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "659d7b0a",
    "metadata": {},
    "outputs": [],
@@ -2367,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "cbc728b7",
    "metadata": {},
    "outputs": [
@@ -2396,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "76093a24",
    "metadata": {},
    "outputs": [
@@ -2416,7 +2416,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "39c8f36f",
    "metadata": {},
    "outputs": [
@@ -2800,7 +2800,7 @@
        "19                3.839166                       NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2813,7 +2813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "d89917d4",
    "metadata": {},
    "outputs": [],
@@ -2831,7 +2831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "c62ec4c3",
    "metadata": {},
    "outputs": [
@@ -2928,7 +2928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "3d3bb7a7",
    "metadata": {
     "scrolled": false
@@ -2981,7 +2981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "b066f812",
    "metadata": {},
    "outputs": [
@@ -3151,7 +3151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "5203008b",
    "metadata": {
     "scrolled": true
@@ -3161,7 +3161,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mateusz\\AppData\\Local\\Temp\\ipykernel_4484\\4290702021.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\mateusz\\AppData\\Local\\Temp\\ipykernel_4752\\4290702021.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -3184,7 +3184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "b04332e8",
    "metadata": {
     "scrolled": false
@@ -3266,7 +3266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "aa2e06bc",
    "metadata": {},
    "outputs": [],
@@ -3278,7 +3278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "01506b16",
    "metadata": {},
    "outputs": [],
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "62b919f1",
    "metadata": {},
    "outputs": [
@@ -3367,7 +3367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "da4cc337",
    "metadata": {},
    "outputs": [
@@ -3605,7 +3605,7 @@
        "69               24.343903                 25225.242  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3624,7 +3624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "78144c09",
    "metadata": {},
    "outputs": [
@@ -3642,7 +3642,7 @@
        "Name: co2, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3661,7 +3661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "400649f5",
    "metadata": {},
    "outputs": [
@@ -3679,7 +3679,7 @@
        "Name: Target_Rank, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3693,7 +3693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "c05ede95",
    "metadata": {},
    "outputs": [
@@ -3807,7 +3807,7 @@
        "3                  7452.909031                7.495093        306.5  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3835,7 +3835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "ed005b77",
    "metadata": {
     "scrolled": false
@@ -3868,7 +3868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "a86a3cd7",
    "metadata": {
     "scrolled": false
@@ -3960,7 +3960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "36dcc47f",
    "metadata": {},
    "outputs": [
@@ -3996,7 +3996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "31e21777",
    "metadata": {
     "scrolled": false
@@ -4086,7 +4086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "82f66f6a",
    "metadata": {},
    "outputs": [],
@@ -4102,7 +4102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "5fea86b3",
    "metadata": {},
    "outputs": [],
@@ -4122,7 +4122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "01305339",
    "metadata": {},
    "outputs": [],
@@ -4142,7 +4142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "fb859e75",
    "metadata": {},
    "outputs": [
@@ -4185,7 +4185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "d47489bd",
    "metadata": {},
    "outputs": [
@@ -4278,7 +4278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "844c097c",
    "metadata": {},
    "outputs": [
@@ -4335,7 +4335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "f4e7a011",
    "metadata": {},
    "outputs": [],
@@ -4345,7 +4345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "a4a13b00",
    "metadata": {},
    "outputs": [
@@ -4380,7 +4380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "70efd4b8",
    "metadata": {},
    "outputs": [
@@ -4463,7 +4463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "id": "d127ebea",
    "metadata": {
     "scrolled": false
@@ -4522,7 +4522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "id": "aedca0df",
    "metadata": {
     "scrolled": false
@@ -4603,6 +4603,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 1.0\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2115.6225\n",
       "Mean Absolute Error: 379.375752\n",
@@ -4698,6 +4699,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 0.5\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2116.1235\n",
       "Mean Absolute Error: 376.959054\n",
@@ -4793,6 +4795,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 0.2\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2116.4244\n",
       "Mean Absolute Error: 375.883492\n",
@@ -4888,6 +4891,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 0.1\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2116.5247\n",
       "Mean Absolute Error: 375.683417\n",
@@ -4919,6 +4923,7 @@
     "    lasso.fit(x_train,y_train)\n",
     "    coeff_df = pd.DataFrame(lasso.coef_, colnames, columns=['Coefficient'])  \n",
     "    display(coeff_df)\n",
+    "    print(f'Alpha level: {i}')\n",
     "    \n",
     "    score_model(lasso, x_train, y_train, x_test, y_test)\n",
     "    \n",
@@ -4940,7 +4945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "280a2c06",
    "metadata": {},
    "outputs": [
@@ -4975,7 +4980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "d5d1a631",
    "metadata": {
     "scrolled": false
@@ -5056,6 +5061,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 1.0\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2117.0069\n",
       "Mean Absolute Error: 377.763853\n",
@@ -5151,6 +5157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 0.5\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2116.8303\n",
       "Mean Absolute Error: 376.532494\n",
@@ -5246,6 +5253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 0.2\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2116.7073\n",
       "Mean Absolute Error: 375.851287\n",
@@ -5341,6 +5349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 0.1\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2116.6629\n",
       "Mean Absolute Error: 375.636577\n",
@@ -5370,6 +5379,7 @@
     "    ridge.fit(x_train,y_train)\n",
     "    coeff_df = pd.DataFrame(ridge.coef_, colnames, columns=['Coefficient'])  \n",
     "    display(coeff_df)\n",
+    "    print(f'Alpha level: {i}')\n",
     "    \n",
     "    score_model(ridge, x_train, y_train, x_test, y_test)\n",
     "    \n",
@@ -5391,7 +5401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "id": "961a6bce",
    "metadata": {
     "scrolled": false
@@ -5472,6 +5482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 1.0\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2114.0915\n",
       "Mean Absolute Error: 507.466085\n",
@@ -5562,6 +5573,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 0.5\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2117.0965\n",
       "Mean Absolute Error: 438.840906\n",
@@ -5652,6 +5664,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 0.2\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2118.3545\n",
       "Mean Absolute Error: 398.948227\n",
@@ -5742,6 +5755,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Alpha level: 0.1\n",
       "#### Training dataset scores ####\n",
       "The intercept for model is 2118.3188\n",
       "Mean Absolute Error: 389.923823\n",
@@ -5768,6 +5782,7 @@
     "    elastic.fit(x_train, y_train)\n",
     "    coeff_df = pd.DataFrame(elastic.coef_, colnames, columns=['Coefficient'])  \n",
     "    display(coeff_df)\n",
+    "    print(f'Alpha level: {i}')\n",
     "    \n",
     "    score_model(elastic, x_train, y_train, x_test, y_test)"
    ]
@@ -5782,7 +5797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "id": "7926a54b",
    "metadata": {},
    "outputs": [
@@ -5805,7 +5820,7 @@
       "#### Cross validation Scoring, 10-fold ####\n",
       "[ 0.80476704  0.2193659  -1.31665272  0.32078548 -1.05090854  0.05417831\n",
       "  0.78506656 -0.90874898  0.53012186 -0.26092554]\n",
-      "Average 10-Fold CV Score: -0.0822950621182563\n"
+      "Average 10-Fold CV Score: -0.08229506211825632\n"
      ]
     }
    ],
